# mpi-benchmark

./: .clang-format  .gitignore  CMakeLists.txt  DATA.md  README.md  TODO.md  jesper.py  main  main.cpp  schema.json
hydra/test-scatterv-alldist-32p-mpich/: scatterv-alternating.slurm  scatterv-bucket.slurm  scatterv-decreasing.slurm  scatterv-equal.slurm  scatterv-exponential.slurm  scatterv-increasing.slurm  scatterv-normal.slurm  scatterv-spikes.slurm  scatterv-two-blocks.slurm  scatterv-uniform.slurm  scatterv-zipfian.slurm
hydra/test-scatterv-alldist-32p-openmpi/: scatterv-alternating.slurm  scatterv-bucket.slurm  scatterv-decreasing.slurm  scatterv-equal.slurm  scatterv-exponential.slurm  scatterv-increasing.slurm  scatterv-normal.slurm  scatterv-spikes.slurm  scatterv-two-blocks.slurm  scatterv-uniform.slurm  scatterv-zipfian.slurm
src/: CMakeLists.txt  allgather.cpp  allgatherv.cpp  alltoall.cpp  alltoallw.cpp  bcast.cpp  gatherv.cpp  ibcast.cpp  json.cpp  lbcast.cpp  scatterv.cpp  tests.cpp
test/: allgatherv-alldist.json  allgatherv-incrproc.json  custom.csv  data.py  example.json  gatherv-alldist.json  gatherv-incrproc.json  plot.py  plot_latency.py  requirements.txt  scatterv-alldist.json  scatterv-incrproc.json  scatterv.json  suite.py
test/allgatherv/: allgatherv-alldist-4p.json  allgatherv-alternating-4p.json  allgatherv-bucket-4p.json  allgatherv-decreasing-4p.json  allgatherv-equal-4p.json  allgatherv-exponential-4p.json  allgatherv-increasing-4p.json  allgatherv-incrproc.json  allgatherv-normal-4p.json  allgatherv-spikes-4p.json  allgatherv-two-blocks-4p.json  allgatherv-uniform-4p.json  allgatherv-zipfian-4p.json
test/alltoallw/: alltoallw-alldist-4p.json  alltoallw-alternating-4p.json  alltoallw-bucket-4p.json  alltoallw-decreasing-4p.json  alltoallw-equal-4p.json  alltoallw-exponential-4p.json  alltoallw-increasing-4p.json  alltoallw-incrproc.json  alltoallw-normal-4p.json  alltoallw-spikes-4p.json  alltoallw-two-blocks-4p.json  alltoallw-uniform-4p.json  alltoallw-zipfian-4p.json
test/gatherv/: gatherv-alldist-4p.json  gatherv-alternating-4p.json  gatherv-bucket-4p.json  gatherv-decreasing-4p.json  gatherv-equal-4p.json  gatherv-exponential-4p.json  gatherv-increasing-4p.json  gatherv-incrproc.json  gatherv-normal-4p.json  gatherv-spikes-4p.json  gatherv-two-blocks-4p.json  gatherv-uniform-4p.json  gatherv-zipfian-4p.json
test/scatterv/: scatterv-alldist-4p.json  scatterv-alternating-4p.json  scatterv-bucket-4p.json  scatterv-decreasing-4p.json  scatterv-equal-4p.json  scatterv-exponential-4p.json  scatterv-increasing-4p.json  scatterv-incrproc.json  scatterv-normal-4p.json  scatterv-spikes-4p.json  scatterv-two-blocks-4p.json  scatterv-uniform-4p.json  scatterv-zipfian-4p.json
util/: plot_latency.py
