cmake_minimum_required(VERSION 3.18.4)
project(benchmark)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/)

find_package(MPI REQUIRED)
find_package(Python3 REQUIRED)

include_directories(${MPI_INCLUDE_PATH})

add_executable(bcast src/bcast.cpp)
add_executable(allgatherv src/allgatherv.cpp)
add_executable(scatterv src/scatterv.cpp)
add_executable(gatherv src/gatherv.cpp)
add_executable(alltoallw src/alltoallw.cpp)

target_link_libraries(bcast PRIVATE ${MPI_LIBRARIES})
target_link_libraries(allgatherv PRIVATE ${MPI_LIBRARIES})
target_link_libraries(gatherv PRIVATE ${MPI_LIBRARIES})
target_link_libraries(scatterv PRIVATE ${MPI_LIBRARIES})
target_link_libraries(alltoallw PRIVATE ${MPI_LIBRARIES})

enable_testing()
add_test(NAME scatterv-alternating-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-alternating-4p.json)
add_test(NAME scatterv-bucket-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-bucket-4p.json)
add_test(NAME scatterv-decreasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-decreasing-4p.json)
add_test(NAME scatterv-equal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-equal-4p.json)
add_test(NAME scatterv-exponential-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-exponential-4p.json)
add_test(NAME scatterv-increasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-increasing-4p.json)
add_test(NAME scatterv-normal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-normal-4p.json)
add_test(NAME scatterv-spikes-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-spikes-4p.json)
add_test(NAME scatterv-two-blocks-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-two-blocks-4p.json)
add_test(NAME scatterv-uniform-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-uniform-4p.json)
add_test(NAME scatterv-zipfian-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/scatterv/scatterv-zipfian-4p.json)

add_test(NAME gatherv-alternating-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-alternating-4p.json)
add_test(NAME gatherv-bucket-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-bucket-4p.json)
add_test(NAME gatherv-decreasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-decreasing-4p.json)
add_test(NAME gatherv-equal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-equal-4p.json)
add_test(NAME gatherv-exponential-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-exponential-4p.json)
add_test(NAME gatherv-increasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-increasing-4p.json)
add_test(NAME gatherv-normal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-normal-4p.json)
add_test(NAME gatherv-spikes-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-spikes-4p.json)
add_test(NAME gatherv-two-blocks-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-two-blocks-4p.json)
add_test(NAME gatherv-uniform-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-uniform-4p.json)
add_test(NAME gatherv-zipfian-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/gatherv/gatherv-zipfian-4p.json)

add_test(NAME allgatherv-alternating-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-alternating-4p.json)
add_test(NAME allgatherv-bucket-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-bucket-4p.json)
add_test(NAME allgatherv-decreasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-decreasing-4p.json)
add_test(NAME allgatherv-equal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-equal-4p.json)
add_test(NAME allgatherv-exponential-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-exponential-4p.json)
add_test(NAME allgatherv-increasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-increasing-4p.json)
add_test(NAME allgatherv-normal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-normal-4p.json)
add_test(NAME allgatherv-spikes-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-spikes-4p.json)
add_test(NAME allgatherv-two-blocks-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-two-blocks-4p.json)
add_test(NAME allgatherv-uniform-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-uniform-4p.json)
add_test(NAME allgatherv-zipfian-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/allgatherv/allgatherv-zipfian-4p.json)

add_test(NAME alltoallw-alternating-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-alternating-4p.json)
add_test(NAME alltoallw-bucket-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-bucket-4p.json)
add_test(NAME alltoallw-decreasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-decreasing-4p.json)
add_test(NAME alltoallw-equal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-equal-4p.json)
add_test(NAME alltoallw-exponential-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-exponential-4p.json)
add_test(NAME alltoallw-increasing-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-increasing-4p.json)
add_test(NAME alltoallw-normal-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-normal-4p.json)
add_test(NAME alltoallw-spikes-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-spikes-4p.json)
add_test(NAME alltoallw-two-blocks-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-two-blocks-4p.json)
add_test(NAME alltoallw-uniform-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-uniform-4p.json)
add_test(NAME alltoallw-zipfian-4p COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/test/suite.py --no-compress --no-plot --wd ${CMAKE_BINARY_DIR}  ${CMAKE_SOURCE_DIR}/test/alltoallw/alltoallw-zipfian-4p.json)
